force-app/main/default/objects/Case/fields/Block_Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Block_Credit_Card_Number__c</fullName>
    <label>Block Credit Card Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>