force-app/main/default/objects/Case/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Card</label>
    <referenceTo>Credit_Card__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>